--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "$schema": "https://openapi.vercel.sh/vercel.json",
     "version": 2,
-    "alias": "hieronymus.dev",
+    "alias": "hieronymus-dev.vercel.app",
     "cleanUrls": true,
     "public": true,
     "redirects": [
